# URL-Shortener

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20250411165532_init.up.sql
backend/src/: Dockerfile  error.rs  main.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/models/: url.rs
backend/src/routes/: redirect.rs  shorten.rs
backend/src/services/: url_service.rs
frontend/: .env.docker  .env.example  .gitignore  .prettierrc.yml  Dockerfile  bun.lockb  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/project.inlang/: project_id  settings.json
frontend/src/: app.html  app.postcss
frontend/src/lib/: api.ts  index.ts  types.ts
frontend/src/lib/components/: Button.svelte  Input.svelte  UrlCard.svelte
frontend/src/lib/components/stories/: Header.stories.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/form/: form-description.svelte  form-element-field.svelte  form-field-errors.svelte  form-field.svelte  form-fieldset.svelte  form-label.svelte  form-legend.svelte
frontend/src/lib/schemas/app/: dashboard.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.svelte  page.svelte.test.ts
frontend/src/routes/(app)/: +page.server.ts  +page.svelte
frontend/src/routes/(app)/[...path]/: +page.svelte
frontend/src/routes/bro/: +page.server.ts  +page.svelte
frontend/src/schemas/: dashboard.ts  url.ts
src/: error.rs  main.rs
src/config/: mod.rs
src/services/: url_service.rs
(+4 files in other folders)
