[package]
name = "Link-Shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = "0.8.3"
tower-http = "0.6.2"
chrono = "0.4.40"
serde_json = "1.0.139"
nanoid = "0.4.0"