[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "time"] }

# Utility
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0.12"

[dev-dependencies]
# Add test dependencies if needed