[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utility
nanoid = "0.4"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0.12"

[dev-dependencies]
# Add test dependencies if needed